finished transfer section and logic

--- a/src/app/topup/topup.component.html
+++ b/src/app/topup/topup.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3 class="login-heading">Hello there 👋</h3>
+  <h3 class="login-heading">Add some cash🤑</h3>
 
   <h4 *ngIf="error">{{ error }}</h4>
 
