--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -16,7 +16,7 @@
 
   <div class="cta-btns">
     <button mat-raised-button class="btn" (click)="addMoney()">Add Money</button>
-    <button mat-raised-button class="btn">Send Money</button>
+    <button mat-raised-button class="btn" (click)="transferMoney()">Send Money</button>
   </div>
 
   <div class="transactions">
