--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -20,3 +20,15 @@
   color: white !important;
   background-color: black !important;
 }
+
+@media screen and (max-width: 600px) {
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .input-field {
+    width: 60vw;
+  }
+}
