--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -65,3 +65,17 @@
 .skeleton-line-name {
   width: 300px;
 }
+
+@media screen and (max-width: 600px) {
+  .cta-btns {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .btn {
+    height: 50px;
+    padding: 5px 65px;
+    font-size: 20px;
+    margin: 15px 0px;
+  }
+}
